Updates from ShareLaTeX

--- a/02_theory.tex
+++ b/02_theory.tex
@@ -246,7 +246,7 @@ AD can be used in a wide spectre of applications, but in common for them all is 
 \begin{equation*}
     x_{i+1} = x_i - \frac{f(x_i)}{f'(x_i)},
 \end{equation*}
-for an initial $x_0$, will converge to a root of $f$ given that it satisfies the assumptions made in the derivation of the formulae. This is called the Newton-Raphson method \textbf{is it necessary to have reference here? If so what kind of?}. With AD this is super easy as you only have to define the function $f(x)$ and then the AD finds $f'(x)$ automatically and you can use the Newton-Raphson method directly. Exactly the same approach can be used to solve linear systems in multiple dimensions. Let us look at the linear system 
+for an initial $x_0$, will converge to a root of $f$ given that it satisfies the assumptions made in the derivation of the formulae. This is called the Newton-Raphson method \todo{Is it necessary to have reference here? If so what kind of?}. With AD this is super easy as you only have to define the function $f(x)$ and then the AD finds $f'(x)$ automatically and you can use the Newton-Raphson method directly. Exactly the same approach can be used to solve linear systems in multiple dimensions. Let us look at the linear system 
 \begin{equation}
     \textbf{A}\boldsymbol{x} = \textbf{b}.
     \label{eq:linearSystem}
