--- a/configurations/packages.sty
+++ b/configurations/packages.sty
@@ -102,6 +102,7 @@
 \usepackage{fourier}
 \usepackage{wrapfig}
 \usepackage{marvosym}
+\usepackage{todonotes}
 \usepackage{rotating}
 \usepackage[version=4]{mhchem}
 \usepackage{ifthen}             % for bruk av den nye kommandoen \note{}
